refactor: update repository classes to use PanacheRepositoryBase and improve query methods